syntax = "proto3";

message oipProto {

    option go_package = "oipProto";

    message HistorianDataPoint {

        int32 Version = 1;
        bytes Pub_key = 2;
        double Mining_rig_rentals_last10 = 3;
        double Mining_rig_rentals_last24_hr = 4;
        double Autominer_pool_hashrate = 5;
        double Flo_net_hash_rate = 6;
        double Flo_market_priceBT_c = 7;
        double Flo_market_priceUS_d = 8;
        double Ltc_market_priceUS_d = 9;
        double Nice_hash_last = 10;
        double Nice_hash24hr = 11;
    }

    message HistorianPayout {

        int32 Version = 1;
    }

    message MultiPart {

        uint32 current_part = 1;
        uint32 count_parts = 2;
        bytes raw_data = 3;
        Txid reference = 4;
    }

    message Txid {

        bytes raw = 1;
    }

    message OipFive {

        RecordTemplateProto record_template = 1;
        RecordProto record = 2;
        Transfer transfer = 7;
        Deactivate deactivate = 8;
        Edit edit = 9;
    }

    message Transfer {
    }

    message Deactivate {
    }

    message Edit {
    }

    message RecordProto {

        repeated string tags = 4;
        Payment payment = 6;
        OipDetails details = 7;
        Permissions permissions = 8;
    }

    message Permissions {
    }

    message Payment {
    }

    message OipDetails {

        repeated google.protobuf.Any details = 1;
    }

    message RecordTemplateProto {

        string friendly_name = 1;
        string description = 2;
        bytes Descriptor_set_proto = 4;
        repeated sfixed64 extends = 12;
        sfixed64 identifier = 10;
    }

    message SignedMessage {

        bytes Serialized_message = 1;
        MessageTypes Message_type = 2;
        SignatureTypes Signature_type = 3;
        bytes Pub_key = 4;
        bytes Signature = 5;
    }

    enum MessageTypes {

        InvalidMessage = 0;
        OIP05 = 1;
        Historian = 2;
        Multipart = 3;
    }

    enum SignatureTypes {

        InvalidSignature = 0;
        Flo = 1;
        Btc = 2;
        Rvn = 3;
        Tx = 4;
    }

    message templates {

        option go_package = "github.com/oipwg/oip/proto/templates";

        message tmpl_000000000000F113 {

            string display_name = 1;
            string file_path = 2;
            uint64 size = 3;
            string content_type = 4;
            Network network = 5;
            string location = 6;
        }

        enum Network {

            UNKNOWN_NETWORK = 0;
            IPFS = 1;
            WEB_TORRENT = 2;
            HTTP = 3;
        }

        message tmpl_00000000000BA51C {

            string title = 1;
            string description = 2;
            int64 year = 3;
        }
    }
}

message google {

    message protobuf {

        message Any {

            string type_url = 1;
            bytes value = 2;
        }
    }
}